# el-service-routing-app

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_stop_hours.py  0003_store_catalog.py  0004_completion_feedback.py  0005_learned_service_times.py  0006_unassigned_reason.py  0007_users_auth.py  0008_tour_lifecycle.py  0009_push_tokens.py  0010_store_service_times.py  0011_service_records.py  0012_store_source_of_truth.py  0013_address_review.py  0014_is_demo.py  0015_demo_stores.py  0016_paper_plan_alignment.py  0017_direct_service_time.py
backend/app/: config.py  db.py  main.py  security.py
backend/app/api/: __init__.py  auth.py  deps.py  feedback.py  me.py  reports.py  stops.py  stores.py  tours.py  users.py
backend/app/models/: __init__.py  employee.py  geocode_cache.py  hotel.py  push_token.py  service_record.py  stop.py  store.py  store_service_time.py  task.py  tour.py  user.py  visit_feedback.py
backend/app/routing/: __init__.py  osrm.py  vroom.py
backend/app/schemas/: __init__.py  draft.py  feedback.py  optimise.py  pull.py  push.py  reports.py  stop.py  store.py  tour.py  user.py
backend/app/services/: __init__.py  push.py  (+12 more)
backend/scripts/: backfill_tour_users.py  cleanup_demo_tours.py  cleanup_paper_alignment.py  run_demo.py  seed_admin.py  seed_demo_showcase.py  seed_demo_tour.py  seed_stores.py
backend/tests/: conftest.py  test_attributes_feedback.py  test_auth.py  test_commit_and_patch.py  test_demo_separation.py  test_effective_window.py  test_extract_and_draft.py  test_extraction_local.py  test_list_stops.py  test_office_endpoints.py  test_opening_hours.py  test_optimise.py  test_osrm_smoke.py  test_plan_export.py  test_provenance.py  test_pull_forward.py  test_push_notifications.py  test_rbac.py  test_region_guardrail.py  test_replan.py  test_reports.py  test_service_times.py  test_store_catalog.py  test_store_resolution.py  test_store_suggest.py
(+102 files in other folders)
