[project]
name = "el-service-backend"
version = "0.1.0"
description = "EL Service routing API: tour-plan extraction, geocoding, and route data."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy",
    "geoalchemy2",
    "alembic",
    "psycopg[binary]",
    "anthropic",
    "httpx",
    "pyjwt",
    "passlib",
    # passlib 1.7.4 reads bcrypt.__about__, removed in bcrypt 4.1
    "bcrypt>=4.0,<4.1",
    # Commit-time store resolution (fuzzy address matching)
    "rapidfuzz",
    # Plan export (GET /tours/{id}/plan/export)
    "openpyxl",
    "reportlab",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
